# pico2-emu2413

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emu2413.cpp  emu2413.h  emu2413_picoI2sAudioDriver.cpp  pico2-emu2413.cpp
audio_i2s/: audio_i2s.h  picoI2sAudio.h
miditones/: miditonesFile.cpp  miditonesSettings.h
